--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Landscaper</title>
+<title>JMOC Services</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -45,7 +45,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand page-scroll" href="#page-top">Landscaper</a> </div>
+      <a class="navbar-brand page-scroll" href="#page-top">JMOC</a> </div>
     
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -68,10 +68,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 intro-text">
-            <h1>Landscaping Services</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-              Duis sed dapibus leo nec ornare diam.</p>
-            <a href="#about" class="btn btn-custom btn-lg page-scroll">More Info</a> </div>
+            <h1>JMOC</h1>
+            <p>For All your Outdoor Needs</p>
+            <a href="#services" class="btn btn-custom btn-lg page-scroll">Our Services</a> </div>
         </div>
       </div>
     </div>
@@ -83,24 +82,23 @@
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <div class="about-text">
-          <h2>Welcome to <span>Landscaper</span></h2>
+          <h2>Welcome to <span>JMOC</span></h2>
           <hr>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
+          <p>Driven by a vision for a cleaner future, recent high school graduate, Joe Salemi, established JMOC Services. Committed to bettering the community, our team, comprised of young individuals, offer residential garbage bin cleaning services, to guarantee fresh bins. Alongside garbage bin cleaning, JMOC offers pressure washing, snow removal, and landscaping to ensure your needs are met year round. We offer our services in Arlington Heights, Palatine, Glenview, Mount Prospect, Prospect Heights, and surrounding communities.</p>
           <a href="#services" class="btn btn-custom btn-lg page-scroll">View All Services</a> </div>
       </div>
       <div class="col-xs-12 col-md-3">
         <div class="about-media"> <img src="img/about-1.jpg" alt=" "> </div>
         <div class="about-desc">
-          <h3>Garden Care</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis.</p>
+          <h3>Cleaning and Washing</h3>
+          <p></p>
         </div>
       </div>
       <div class="col-xs-12 col-md-3">
         <div class="about-media"> <img src="img/about-2.jpg" alt=" "> </div>
         <div class="about-desc">
-          <h3>Lawn Care</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante.</p>
+          <h3>Landscaping</h3>
+          <p></p>
         </div>
       </div>
     </div>
@@ -112,35 +110,35 @@
     <div class="col-md-10 col-md-offset-1 section-title text-center">
       <h2>Our Services</h2>
       <hr>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
+      <p>Checkout our Most Popular Services!</p>
     </div>
     <div class="row">
       <div class="col-md-3 text-center">
         <div class="service-media"> <img src="img/services/service-1.jpg" alt=" "> </div>
         <div class="service-desc">
-          <h3>Lawn Care</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
+          <h3>Garbage Bin Cleaning</h3>
+          <p>Garbage Bin Cleaning is JMOC Services's specialty with over 500 bins cleaned last summer, we are hoping to expand even more in 2024 and beyond.</p>
         </div>
       </div>
       <div class="col-md-3 text-center">
         <div class="service-media"> <img src="img/services/service-2.jpg" alt=" "> </div>
         <div class="service-desc">
-          <h3>Landscape Design</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
+          <h3>Pressure Washing</h3>
+          <p>JMOC Services uses a High Pressure System to Remove Dirt, Grime, Mold, And Other Stubborn Stains. We travel all over the Chicagoland Area to meet your Outdoor Cleaning needs. Polish your home with our efficient cleaning techniques!</p>
         </div>
       </div>
       <div class="col-md-3 text-center">
         <div class="service-media"> <img src="img/services/service-3.jpg" alt=" "> </div>
         <div class="service-desc">
-          <h3>Tree Care</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
+          <h3>Window Washing</h3>
+          <p>JMOC Services uses professional window cleaning techniques to remove water spots and grime to leave you with streak free, spotless windows!</p>
         </div>
       </div>
       <div class="col-md-3 text-center">
         <div class="service-media"> <img src="img/services/service-4.jpg" alt=" "> </div>
         <div class="service-desc">
-          <h3>Spring & Fall Cleanup</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
+          <h3>Landscaping</h3>
+          <p>JMOC Services has partnered with A&N Outdoor Services to satisfy all your landscaping needs this year. A&N is a trusted group of college kids, with very similar morals and goals as JMOC.</p>
         </div>
       </div>
     </div>
@@ -152,7 +150,7 @@
     <div class="section-title text-center center">
       <h2>Project Gallery</h2>
       <hr>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
+      <p>Here are some of our Finished Projects</p>
     </div>
     <div class="categories">
       <ul class="cat">
