--- a/index.html
+++ b/index.html
@@ -291,31 +291,29 @@
     <div class="section-title text-center">
       <h2>Contact Us</h2>
       <hr>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
+      <p>Reach Out With Any Questions</p>
     </div>
     <div class="col-md-10 col-md-offset-1 contact-info">
       <div class="col-md-4">
         <h3>Address</h3>
         <hr>
         <div class="contact-item">
-          <p>4321 California St,</p>
-          <p>San Francisco, CA 12345</p>
+          <p>Greater Chicago Land Area</p>
         </div>
       </div>
       <div class="col-md-4">
         <h3>Working Hours</h3>
         <hr>
         <div class="contact-item">
-          <p>Monday-Saturday: 07:00 - 18:00</p>
-          <p>Sunday: CLOSED</p>
+          <p>Monday-Friday: 09:00 - 5:00</p>
         </div>
       </div>
       <div class="col-md-4">
         <h3>Contact Info</h3>
         <hr>
         <div class="contact-item">
-          <p>Phone: +1 123 456 1234</p>
-          <p>Email: info@company.com</p>
+          <p>Phone: (847)-345-6717</p>
+          <p>Email: jmocservices@gmail.com</p>
         </div>
       </div>
     </div>
