--- a/index.html
+++ b/index.html
@@ -114,28 +114,28 @@
     </div>
     <div class="row">
       <div class="col-md-3 text-center">
-        <div class="service-media"> <img src="img/services/service-1.jpg" alt=" "> </div>
+        <div class="service-media"> <img src="img/services/JMOCGarbage.jpg" alt=" "> </div>
         <div class="service-desc">
           <h3>Garbage Bin Cleaning</h3>
           <p>Garbage Bin Cleaning is JMOC Services's specialty with over 500 bins cleaned last summer, we are hoping to expand even more in 2024 and beyond.</p>
         </div>
       </div>
       <div class="col-md-3 text-center">
-        <div class="service-media"> <img src="img/services/service-2.jpg" alt=" "> </div>
+        <div class="service-media"> <img src="img/services/IMG_8870 2_000 (1).jpg" alt=" "> </div>
         <div class="service-desc">
           <h3>Pressure Washing</h3>
           <p>JMOC Services uses a High Pressure System to Remove Dirt, Grime, Mold, And Other Stubborn Stains. We travel all over the Chicagoland Area to meet your Outdoor Cleaning needs. Polish your home with our efficient cleaning techniques!</p>
         </div>
       </div>
       <div class="col-md-3 text-center">
-        <div class="service-media"> <img src="img/services/service-3.jpg" alt=" "> </div>
+        <div class="service-media"> <img src="img/services/JMOCLadderPerson.jpg" alt=" "> </div>
         <div class="service-desc">
           <h3>Window Washing</h3>
           <p>JMOC Services uses professional window cleaning techniques to remove water spots and grime to leave you with streak free, spotless windows!</p>
         </div>
       </div>
       <div class="col-md-3 text-center">
-        <div class="service-media"> <img src="img/services/service-4.jpg" alt=" "> </div>
+        <div class="service-media"> <img src="img/services/IMG_5310 2.jpg" alt=" "> </div>
         <div class="service-desc">
           <h3>Landscaping</h3>
           <p>JMOC Services has partnered with A&N Outdoor Services to satisfy all your landscaping needs this year. A&N is a trusted group of college kids, with very similar morals and goals as JMOC.</p>
