--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/Gallery1.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>Lorem Ipsum</h4>
+                <h4>Patio</h4>
               </div>
               <img src="img/portfolio/Gallery1.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -180,7 +180,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/Gallery2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>Adipiscing Elit</h4>
+                <h4>Garage</h4>
               </div>
               <img src="img/portfolio/Gallery2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -189,7 +189,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/Gallery3.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>Lorem Ipsum</h4>
+                <h4>Pool</h4>
               </div>
               <img src="img/portfolio/Gallery3.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -198,7 +198,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/Gallery4.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>Lorem Ipsum</h4>
+                <h4>Before</h4>
               </div>
               <img src="img/portfolio/Gallery4.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -207,7 +207,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/Gallery5.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>Adipiscing Elit</h4>
+                <h4>Before and After</h4>
               </div>
               <img src="img/portfolio/Gallery5.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -216,7 +216,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/Gallery6.jpg title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>Dolor Sit</h4>
+                <h4>Window</h4>
               </div>
               <img src="img/portfolio/Gallery6.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -225,7 +225,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/07-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>Dolor Sit</h4>
+                <h4>After</h4>
               </div>
               <img src="img/portfolio/07-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -234,7 +234,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/08-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>Lorem Ipsum</h4>
+                <h4>Free Form Patio</h4>
               </div>
               <img src="img/portfolio/08-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -243,7 +243,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/09-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>Adipiscing Elit</h4>
+                <h4>Garbage Bins</h4>
               </div>
               <img src="img/portfolio/09-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
