--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
         </div>
         <div class="col-sm-6 col-md-4 planting">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/Gallery2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_4458 2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Garage</h4>
               </div>
-              <img src="img/portfolio/Gallery2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_4458 2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 lawn">
@@ -214,11 +214,11 @@
         </div>
         <div class="col-sm-6 col-md-4 garden">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/Gallery6.jpg title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_4604 2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Window</h4>
               </div>
-              <img src="img/portfolio/Gallery6.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_4604 2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 garden">
