--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
         </div>
         <div class="col-sm-6 col-md-4 lawn">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/Gallery3.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_5554 2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Pool</h4>
               </div>
-              <img src="img/portfolio/Gallery3.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_5554 2.jpg class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 lawn">
@@ -205,11 +205,11 @@
         </div>
         <div class="col-sm-6 col-md-4 planting">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/Gallery5.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_6340 2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Before and After</h4>
               </div>
-              <img src="img/portfolio/Gallery5.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_6340 2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 garden">
@@ -223,11 +223,11 @@
         </div>
         <div class="col-sm-6 col-md-4 garden">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/07-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_6434.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>After</h4>
               </div>
-              <img src="img/portfolio/07-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_6434.jpg class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 lawn">
