--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
         </div>
         <div class="col-sm-6 col-md-4 lawn">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/Gallery4.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_6433.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Before</h4>
               </div>
-              <img src="img/portfolio/Gallery4.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_6433.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 planting">
@@ -241,11 +241,11 @@
         </div>
         <div class="col-sm-6 col-md-4 planting">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/09-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/JMOCGarbage.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Garbage Bins</h4>
               </div>
-              <img src="img/portfolio/09-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/JMOCGarbage.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
       </div>
