--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </div>
     <div class="row">
       <div class="col-md-3 text-center">
-        <div class="service-media"> <img src="img/services/JMOCGarbage.jpg" alt=" "> </div>
+        <div class="service-media"> <img src="img/services/IMG_4712.jpg" alt=" "> </div>
         <div class="service-desc">
           <h3>Garbage Bin Cleaning</h3>
           <p>Garbage Bin Cleaning is JMOC Services's specialty with over 500 bins cleaned last summer, we are hoping to expand even more in 2024 and beyond.</p>
