--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <div class="hover-text">
                 <h4>Pool</h4>
               </div>
-              <img src="img/portfolio/IMG_5554 2.jpg class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_5554 2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 lawn">
@@ -227,7 +227,7 @@
               <div class="hover-text">
                 <h4>After</h4>
               </div>
-              <img src="img/portfolio/IMG_6434.jpg class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_6434.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 lawn">
