--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
         <li>
           <ol class="type">
             <li><a href="#" data-filter="*" class="active">All</a></li>
-            <li><a href="#" data-filter=".lawn">Lawn Care</a></li>
-            <li><a href="#" data-filter=".garden">Garden Care</a></li>
-            <li><a href="#" data-filter=".planting">Planting</a></li>
+            <li><a href="#" data-filter=".Cleaning">Cleaning</a></li>
+            <li><a href="#" data-filter=".Detailing">Detailing</a></li>
+            <li><a href="#" data-filter=".Washing">Washing</a></li>
           </ol>
         </li>
       </ul>
@@ -167,7 +167,7 @@
     </div>
     <div class="row">
       <div class="portfolio-items">
-        <div class="col-sm-6 col-md-4 lawn">
+        <div class="col-sm-6 col-md-4 Cleaning">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/Gallery2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -176,7 +176,7 @@
               <img src="img/portfolio/Gallery2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 planting">
+        <div class="col-sm-6 col-md-4 Detailing">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/IMG_4458 2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -185,7 +185,7 @@
               <img src="img/portfolio/IMG_4458 2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 lawn">
+        <div class="col-sm-6 col-md-4 Cleaning">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/IMG_5554 2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -194,7 +194,7 @@
               <img src="img/portfolio/IMG_5554 2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 lawn">
+        <div class="col-sm-6 col-md-4 Washing">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/IMG_6433.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -203,7 +203,7 @@
               <img src="img/portfolio/IMG_6433.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 planting">
+        <div class="col-sm-6 col-md-4 Cleaning">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/IMG_6340 2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -212,7 +212,7 @@
               <img src="img/portfolio/IMG_6340 2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 garden">
+        <div class="col-sm-6 col-md-4 Detailing">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/IMG_4604 2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -221,7 +221,7 @@
               <img src="img/portfolio/IMG_4604 2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 garden">
+        <div class="col-sm-6 col-md-4 Washing">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/IMG_6434.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -230,7 +230,7 @@
               <img src="img/portfolio/IMG_6434.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 lawn">
+        <div class="col-sm-6 col-md-4 Cleaning">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/Gallery5.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -239,7 +239,7 @@
               <img src="img/portfolio/Gallery5.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 planting">
+        <div class="col-sm-6 col-md-4 Detailing">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/JMOCGarbage.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
