--- a/index.html
+++ b/index.html
@@ -144,6 +144,29 @@
     </div>
   </div>
 </div>
+      <!-- Mega Form -->
+  <section id="mega-form" class="wrapper style1 special">
+    <div class="inner" style="max-width: 700px; margin: auto;">
+      <h2>Get a Free Quote</h2>
+      <div class="mb-3">
+        <label class="form-label">What do you need help with?</label>
+        <select class="form-select" id="service-select" onchange="loadGoogleForm()">
+          <option value="">-- Select a Service --</option>
+          <option value="garbage">Garbage Bin Cleaning</option>
+          <option value="pressure">Pressure Washing</option>
+          <option value="window">Window Washing</option>
+          <option value="landscaping">Landscaping</option>
+          <option value="snow">Snow Removal</option>
+          <option value="odd">Odd Jobs</option>
+        </select>
+      </div>
+
+      <div id="google-form-container" style="margin-top: 30px;">
+        <!-- Google Form will load here -->
+      </div>
+    </div>
+  </section>
+    
 <!-- Gallery Section -->
 <div id="portfolio">
   <div class="container">
