--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 </div>
       <!-- Mega Form -->
   <section id="mega-form" class="wrapper style1 special">
-    <div class="inner" style="max-width: 700px; margin: auto;">
+  <div class="container">
       <h2>Get a Free Quote</h2>
       <div class="mb-3">
         <label class="form-label">What do you need help with?</label>
