--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   </div>
 </div>
       <!-- Mega Form -->
-  <section id="mega-form" class="wrapper style1 special">
+  <section id="services">
   <div class="container">
       <h2>Get a Free Quote</h2>
       <div class="mb-3">
