--- a/index.html
+++ b/index.html
@@ -145,7 +145,10 @@
   </div>
       <!-- Mega Form -->
   <div class="container">
+    <div class="col-md-10 col-md-offset-1 section-title text-center">
       <h2>Get a Free Quote</h2>
+     
+    </div>      
       <div class="mb-3">
         <select class="form-select" id="service-select" onchange="loadGoogleForm()">
           <option value="">-- Select a Service --</option>
