--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <h2>Get a Free Quote</h2>
       <hr>
       <div class="mb-3">
-        <select class="form-select" id="service-select" onchange="loadGoogleForm()">
+        <select id="service-select" class="form-select custom-select" onchange="loadGoogleForm()">
           <option value="">-- Select a Service --</option>
           <option value="garbage">Garbage Bin Cleaning</option>
           <option value="pressure">Pressure Washing</option>
