--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
       <div class="col-xs-12 col-md-3">
         <div class="about-media"> <img src="img/about-1.jpg" alt=" "> </div>
         <div class="about-desc">
-          <h3>Cleaning and Washing</h3>
+          <h3>Pressure Washing</h3>
           <p></p>
         </div>
       </div>
       <div class="col-xs-12 col-md-3">
         <div class="about-media"> <img src="img/about-2.jpg" alt=" "> </div>
         <div class="about-desc">
-          <h3>Landscaping</h3>
+          <h3>Windows, Bins, and More!</h3>
           <p></p>
         </div>
       </div>
