--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-md-3">
-        <div class="about-media"> <img src="img/IMG_5268 2.jpg" alt=" "> </div>
+        <div class="about-media"> <img src="img/IMG_5268 2.PNG" alt=" "> </div>
         <div class="about-desc">
           <h3>Windows, Bins, and More!</h3>
           <p></p>
