--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <a href="#services" class="btn btn-custom btn-lg page-scroll">View All Services</a> </div>
       </div>
       <div class="col-xs-12 col-md-6">
-        <div class="about-media"> <img src="img/IMG_5268 2.PNG" alt=" "> </div>
+        <div class="about-media"> <img src="img/IMG_5268 2.PNG" alt=" " style="max-width: 80%; height: auto; display: block; margin: 0 auto; padding-top: 20px;"> </div>
         <div class="about-desc">
           <p></p>
         </div>
