--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand page-scroll" href="#page-top">JMOC</a> </div>
+      <a class="navbar-brand page-scroll" href="#page-top">JMOC Services</a> </div>
     
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -68,7 +68,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 intro-text">
-            <h1>JMOC</h1>
+            <h1>JMOC Services</h1>
             <p>For All your Outdoor Needs</p>
             <a href="#services" class="btn btn-custom btn-lg page-scroll">Our Services</a> </div>
         </div>
@@ -279,20 +279,20 @@
         <div class="col-md-10 col-md-offset-1">
           <div id="testimonial" class="owl-carousel owl-theme">
             <div class="item">
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam."</p>
-              <p>- John DOE, Parker County, TX</p>
+              <p>"Highly recommend JMOC! Cleaning garbage cans is one of those things that you know needs to be done, but you keep putting off. Then I saw Joe’s fb ad and hired his company to do this service for us. And, wow, so happy I did! Scheduling was a breeze as was the actual service."</p>
+              <a href="https://NEW-GOOGLE-LINK.com" target="_blank">Read our reviews</a>
             </div>
             <div class="item">
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam."</p>
-              <p>- Jenny DOE, Parker County, TX</p>
+              <p>"I hired Joe owner of JMOC Services to power wash my driveway, sidewalk up to my front door, patio and my backyard sidewalk and wood ramp in front of my shed. Joe and his employee did a great job! Everything looks fantastic! They are very polite and courteous young men. I highly recommend Joe and his company."</p>
+              <a href="https://NEW-GOOGLE-LINK.com" target="_blank">Read our reviews</a>
             </div>
             <div class="item">
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam."</p>
-              <p>- John DOE, Parker County, TX</p>
+              <p>"We first had Joe and crew out for our garbage and recycling bins. We were really happy with their job. We then scheduled them this month for the siding on our house and garage as well as gutters. They were quick, reasonably priced and kept in constant communication. We will use them again in the future!"</p>
+              <a href="https://NEW-GOOGLE-LINK.com" target="_blank">Read our reviews</a>
             </div>
             <div class="item">
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam."</p>
-              <p>- John DOE, Parker County, TX</p>
+              <p>"I recently hired a power washer to clean the exterior of my building and I couldn’t be more impressed. From start to finish, they were professional, punctual and hardworking. They showed great attention to detail and took the time to make sure every corner was spotless."</p>
+              <a href="https://NEW-GOOGLE-LINK.com" target="_blank">Read our reviews</a>
             </div>
           </div>
         </div>
