--- a/index.html
+++ b/index.html
@@ -268,6 +268,14 @@
   </div>
 </div>
 <!-- Areas We Serve -->
+ <div id="about" class="text-center">
+  <div class="container">
+    <div class="section-title">
+      <h2>Areas We Serve</h2>
+      <hr>
+      <p>JMOC Services proudly serves the following locations across the Chicagoland area:</p>
+    </div>
+  </div>
 <div class="container text-center" style="margin-top: 60px;">
   <h3>Areas We Serve</h3>
   <hr>
@@ -294,6 +302,7 @@
       </ul>
     </div>
   </div>
+</div>
 </div>
 
 
