--- a/index.html
+++ b/index.html
@@ -268,15 +268,8 @@
   </div>
 </div>
 <!-- Areas We Serve -->
- <div id="about" class="text-center">
-  <div class="container">
-    <div class="section-title">
-      <h2>Areas We Serve</h2>
-      <hr>
-      <p>JMOC Services proudly serves the following locations across the Chicagoland area:</p>
-    </div>
-  </div>
-<div class="container text-center" style="margin-top: 60px;">
+<section id="quote" style="background-color: #ffffff; padding: 80px 0;">
+  <div class="container text-center" style="margin-top: 60px;">
   <h3>Areas We Serve</h3>
   <hr>
   <p>JMOC Services proudly serves the following locations across the Chicagoland area:</p>
@@ -303,7 +296,7 @@
     </div>
   </div>
 </div>
-</div>
+</section>
 
 
 <!-- Testimonials Section -->
