--- a/index.html
+++ b/index.html
@@ -276,7 +276,6 @@
   <div class="row">
     <div class="col-md-12">
       <ul class="list-inline" style="padding-top: 20px;">
-        <li><a href="index.html"><strong>Head Back to Main Page</strong></a></li>
         <li><a href="arlington-heights.html">Arlington Heights</a></li>
         <li><a href="palatine.html">Palatine</a></li>
         <li><a href="glenview.html">Glenview</a></li>
@@ -293,6 +292,7 @@
         <li><a href="wilmette.html">Wilmette</a></li>
         <li><a href="winnetka.html">Winnetka</a></li>
       </ul>
+      <p><a href="index.html"><strong>Head Back to Main Page</strong></a></p>
     </div>
   </div>
 </div>
