--- a/morton-grove.html
+++ b/morton-grove.html
@@ -158,7 +158,37 @@
     </div>
   </div>
 </section>
-    
+<!-- Areas We Serve -->
+<section id="quote" style="background-color: #ffffff; padding: 80px 0;">
+  <div class="container text-center" style="margin-top: 60px;">
+  <h3>Areas We Serve</h3>
+  <hr>
+  <p>JMOC Services proudly serves the following locations across the Chicagoland area:</p>
+  <div class="row">
+    <div class="col-md-12">
+      <ul class="list-inline" style="padding-top: 20px;">
+        <li><a href="arlington-heights.html">Arlington Heights</a></li>
+        <li><a href="palatine.html">Palatine</a></li>
+        <li><a href="glenview.html">Glenview</a></li>
+        <li><a href="mount-prospect.html">Mount Prospect</a></li>
+        <li><a href="prospect-heights.html">Prospect Heights</a></li>
+        <li><a href="kenilworth.html">Kenilworth</a></li>
+        <li><a href="morton-grove.html">Morton Grove</a></li>
+        <li><a href="niles.html">Niles</a></li>
+        <li><a href="northbrook.html">Northbrook</a></li>
+        <li><a href="northfield.html">Northfield</a></li>
+        <li><a href="park-ridge.html">Park Ridge</a></li>
+        <li><a href="skokie.html">Skokie</a></li>
+        <li><a href="wheeling.html">Wheeling</a></li>
+        <li><a href="wilmette.html">Wilmette</a></li>
+        <li><a href="winnetka.html">Winnetka</a></li>
+      </ul>
+      <p><a href="index.html"><strong>Head Back to Main Page</strong></a></p>
+    </div>
+  </div>
+</div>
+</section>
+ 
 <!-- Gallery Section -->
 <div id="portfolio">
   <div class="container">
