--- a/index.html
+++ b/index.html
@@ -312,8 +312,11 @@
         <div class="col-md-10 col-md-offset-1">
           <div id="testimonial" class="owl-carousel owl-theme">
             <div class="item">
-              <p>"Highly recommend JMOC! Cleaning garbage cans is one of those things that you know needs to be done, but you keep putting off. Then I saw Joe’s fb ad and hired his company to do this service for us. And, wow, so happy I did! Scheduling was a breeze as was the actual service."</p>
-              <p><a href="https://NEW-GOOGLE-LINK.com" target="_blank">Read our reviews</a></p>
+              <p>
+                "Highly recommend JMOC! Cleaning garbage cans is one of those things that you know needs to be done, but you keep putting off. Then I saw Joe’s fb ad and hired his company to do this service for us. And, wow, so happy I did! Scheduling was a breeze as was the actual service."
+                <br>
+                <a href="https://NEW-GOOGLE-LINK.com" target="_blank">Read our reviews</a>
+              </p>
             </div>
             <div class="item">
               <p>"I hired Joe owner of JMOC Services to power wash my driveway, sidewalk up to my front door, patio and my backyard sidewalk and wood ramp in front of my shed. Joe and his employee did a great job! Everything looks fantastic! They are very polite and courteous young men. I highly recommend Joe and his company."</p>
