--- a/arlington-heights.html
+++ b/arlington-heights.html
@@ -311,19 +311,19 @@
           <div id="testimonial" class="owl-carousel owl-theme">
             <div class="item">
               <p>"Highly recommend JMOC! Cleaning garbage cans is one of those things that you know needs to be done, but you keep putting off. Then I saw Joe’s fb ad and hired his company to do this service for us. And, wow, so happy I did! Scheduling was a breeze as was the actual service."</p>
-              <p><a href="https://NEW-GOOGLE-LINK.com" target="_blank">Read our reviews</a></p>
+              <a href="https://NEW-GOOGLE-LINK.com" target="_blank" style="display: inline !important; opacity: 1 !important;">Read our reviews</a>
             </div>
             <div class="item">
               <p>"I hired Joe owner of JMOC Services to power wash my driveway, sidewalk up to my front door, patio and my backyard sidewalk and wood ramp in front of my shed. Joe and his employee did a great job! Everything looks fantastic! They are very polite and courteous young men. I highly recommend Joe and his company."</p>
-              <p><a href="https://NEW-GOOGLE-LINK.com" target="_blank">Read our reviews</a></p>
+              <a href="https://NEW-GOOGLE-LINK.com" target="_blank" style="display: inline !important; opacity: 1 !important;">Read our reviews</a>
             </div>
             <div class="item">
               <p>"We first had Joe and crew out for our garbage and recycling bins. We were really happy with their job. We then scheduled them this month for the siding on our house and garage as well as gutters. They were quick, reasonably priced and kept in constant communication. We will use them again in the future!"</p>
-              <p><a href="https://NEW-GOOGLE-LINK.com" target="_blank">Read our reviews</a></p>
+              <a href="https://NEW-GOOGLE-LINK.com" target="_blank" style="display: inline !important; opacity: 1 !important;">Read our reviews</a>
             </div>
             <div class="item">
               <p>"I recently hired a power washer to clean the exterior of my building and I couldn’t be more impressed. From start to finish, they were professional, punctual and hardworking. They showed great attention to detail and took the time to make sure every corner was spotless."</p>
-              <p><a href="https://NEW-GOOGLE-LINK.com" target="_blank">Read our reviews</a></p>
+              <a href="https://NEW-GOOGLE-LINK.com" target="_blank" style="display: inline !important; opacity: 1 !important;">Read our reviews</a>
             </div>
           </div>
         </div>
