--- a/index.html
+++ b/index.html
@@ -201,10 +201,11 @@
       <ul class="cat">
         <li>
           <ol class="type">
-            <li><a href="#" data-filter="*" class="active">All</a></li>
-            <li><a href="#" data-filter=".Cleaning">Cleaning</a></li>
-            <li><a href="#" data-filter=".Detailing">Detailing</a></li>
-            <li><a href="#" data-filter=".Washing">Washing</a></li>
+            <li><a href="#" data-filter=".Washing">Pressure washing</a></li>
+            <li><a href="#" data-filter=".Window">Window cleaning </a></li>
+            <li><a href="#" data-filter=".Garbage">Garbage Bin Cleaning </a></li>
+            <li><a href="#" data-filter=".Landscaping">Landscaping</a></li>
+
           </ol>
         </li>
       </ul>
@@ -212,43 +213,43 @@
     </div>
     <div class="row">
       <div class="portfolio-items">
-        <div class="col-sm-6 col-md-4 Cleaning">
+        <div class="col-sm-6 col-md-4 Washing">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/Gallery2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/Gallery2.jpg" title="Patio" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Patio</h4>
               </div>
               <img src="img/portfolio/Gallery2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 Detailing">
+        <div class="col-sm-6 col-md-4 Garbage">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/IMG_4458 2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_4458 2.jpg" title="Garbage data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>Garage</h4>
+                <h4>Garbage1</h4>
               </div>
               <img src="img/portfolio/IMG_4458 2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 Cleaning">
+        <div class="col-sm-6 col-md-4 Landscaping">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/IMG_5554 2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>Pool</h4>
+                <h4>Patio Laying</h4>
               </div>
               <img src="img/portfolio/IMG_5554 2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 Washing">
+        <div class="col-sm-6 col-md-4 Garbage">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/IMG_6433.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>Before</h4>
+                <h4>Garbage2</h4>
               </div>
               <img src="img/portfolio/IMG_6433.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 Cleaning">
+        <div class="col-sm-6 col-md-4 Washing">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/IMG_6340 2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -257,25 +258,25 @@
               <img src="img/portfolio/IMG_6340 2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 Detailing">
+        <div class="col-sm-6 col-md-4 Window">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/IMG_4604 2.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>Window</h4>
+                <h4>Window1</h4>
               </div>
               <img src="img/portfolio/IMG_4604 2.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 Washing">
+        <div class="col-sm-6 col-md-4 Landscaping">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/IMG_6434.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>After</h4>
+                <h4>Lawn</h4>
               </div>
               <img src="img/portfolio/IMG_6434.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 Cleaning">
+        <div class="col-sm-6 col-md-4 Washing">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/Gallery5.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -284,9 +285,36 @@
               <img src="img/portfolio/Gallery5.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 Detailing">
+        <div class="col-sm-6 col-md-4 Window">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/JMOCGarbage.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/Gallery5.jpg" title="Windows" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <h4>Windows</h4>
+              </div>
+              <img src="img/portfolio/Gallery5.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 Landscaping">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/Gallery5.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <h4>Patio</h4>
+              </div>
+              <img src="img/portfolio/Gallery5.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 Window">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/Gallery5.jpg" title="Windows" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <h4>Window2</h4>
+              </div>
+              <img src="img/portfolio/Gallery5.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 Garbage">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/JMOCGarbage.jpg" title="Garbage Bin" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Garbage Bins</h4>
               </div>
